major changes and text edits in the vignette

--- a/vignettes/MulEA.Rmd
+++ b/vignettes/MulEA.Rmd
@@ -13,12 +13,20 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE, warning = TRUE, message = TRUE, error = FALSE)
 ```
 
+## Introduction
+
    Functional interpretation of the biological data typically involves identifying key genes, molecules, reactions or pathways by finding non-random changes between two or more conditions or phenotypes and it is often followed by enrichment analysis on set of molecules selected from differential omics analysis. Among many packages that can be applied for this task, only few provide a support for multiple species, ontology types or include statistical tests beyond simple overrepresentation analysis.
    
    MulEA is addressing this gap by allowing enrichment analysis not only within most popular gene and pathway ontologies (GO, KEGG, Reactome) but also in gene expression, protein domain, miRNA and transcription factors data bases created from publicly available resources and presented in standardized manner. Beyond genes or proteins space, MulEA allows working with any kind of data types, i.e. small molecules, chromosome regions, enhancers, molecular interactions or any other information defined by the user as long as it is provided in GMT format (see below) and contain reasonably large amount of categories to test. To analyse the data MulEA provide multiple types of statistics in one tool including hypergeometric test for count based analysis (in contingency table), and analyses of ranked input by modified Kolmogorov-Smirnov test.
    
    In addition, MulEA features improved way to calculate correction for multiple testing that assume partial dependence between ontology terms. By calculating permutation based, empirical false discovery rate correction of the p-values it limits number of incorrectly picked categories falsely scored as significant (false positives) or insignificant (false negatives).
-    
+   
+## Supported organisms and knowledge bases
+
+
+
+
+
 Implemented MulEA features include:
 
 - [Mulea Input Output Data Workflow](#mulea-input-output-data-workflow)
@@ -30,11 +38,9 @@ Implemented MulEA features include:
     - [Ranked Based Tests](#ranked-based-tests)
         - [Kolmogorov Smirnov Test](#kolmogorov-smirnov-test)
         - [Subramanian Test](#subramanian-test)
-    - [Graph Base](#graph-base)
-- [Other](#other)
 
 
-## Mulea Input Output Data Workflow
+## Mulea input and output data formats
 As a first step load the package:
 
 ```{r, results = 'asis'} 
@@ -43,7 +49,6 @@ library(package="MulEA")
 
 There are two input types necessary to run the analysis: 1) knowledge base that defines space of categories and 2) a ranked list of elements to be tested. MulEA supports reading the knowledge base directly from GMT files or with properly formated data frames.
 
-### Input Files
 MulEA expects knowledge base to be in Gene Matrix Transposed (GMT) file format (*.gmt). This is a three column tabular format used in one of the first implementations of ranked based test for gene set enrichment analysis and due to its simplicity it makes generation of knolwedge bases relatively straightforward ([format explanation](http://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29)). Example of the GMT file is included in MulEA installation directory. 
 
 In order to create data frame containing the knowledge base read the GMT file with `MulEA::readGmtFileAsDataFrame()` method. The method requires one parameter `gmtFilePath` to provide path to the file.
@@ -78,13 +83,10 @@ If you would like to save the knolwedge base as a GMT file, use: `MulEA::saveDat
 ```
 
 
-## Data Analysis
-MulEA implements three types of tests, based on contingency tables, rankings and network topology.
+## Set Based Test
+Set-based tests are most commonly used in enrichment analysis. Counts of genes or other entities are collected in form of 2x2 contingency table with rows representing 1) specific knowledge base category and 2) genes in remaining categories and columns corresponding to: 1) the data set under and 2) remaining part of the background set.  This class is  and alows adjusting test's results by Benjamin-Hochberg and permutation tests.  
 
-### Set Based Tests
-Set based tests are most commonly used in enrichment analysis tools. Counts of genes or other entities are collected in form of 2x2 contingency table with rows representing specific knowledge base category and genes in remaining categories and columns corresponding to set under study and remaining part of the background set. MulEA implements hypergeometric test as `SetBasedTest` class. This class is highly configurable and alows adjusting test's results by Benjamin-Hochberg and permutation tests.  
-
-In order to start performing this tests, we have to prepare data in proper form. Commands below all steps neecessary to prepere input data.  
+We start performing set enrichment test by putting the data in a proper form. 
 
 ```{r, results = 'asis', echo = TRUE} 
 modelDfFromFile <- MulEA::readGmtFileAsDataFrame(gmtFilePath = system.file(package="MulEA", "extdata", "model.gmt"))
@@ -96,9 +98,7 @@ dataFromExperimentPool <- unique(c(c("FBgn0033690", "FBgn0261618", "FBgn0004407"
                                    "FBgn0029709", "FBgn0030341")))
 ```
 
-#### Hypergeometric Test  
-
-Basic usage of `SetBasedTest` class is presented as follows:
+MulEA implements hypergeometric test as highly configurable `SetBasedTest` class.
 
 ```{r, results = 'asis', echo = TRUE} 
 setBasedTest <- SetBasedTest(gmt = modelDfFromFile, testData = dataFromExperiment)
@@ -121,9 +121,66 @@ setBasedTestWithPoolRes <- MulEA::runTest(setBasedTestWithPool)
 knitr::kable(setBasedTestWithPoolRes, caption = "Set Based Test Result Data Frame")
 ```
 
-#### Multiple Comparisons Problem  
 
-According to article [Multiple Comparisons Problem](https://en.wikipedia.org/wiki/Multiple_comparisons_problem) you can adjust p-values of tested ontologys by adding the `adjustMethod` argument to `SetBasedTest` class. The value of this argument can newly presented by MulEA method to adjust p-values besed on permutation test. To run that method, please use `"EszterPermutationTest"` as `adjustMethod` argument.
+## Ranking Based Tests
+Fundament under ranked based tests is ranking. Ranking can be an ordered vector or any vector with vector of scores, both of them have to be the same length. For now MulEA provides you two ranked based tests. them are the Kolmogorov-Smirnov test and the Subramanian test. Both of them are encloused in `RankedBasedTest` class, which provides you a possibility to set input data and configur other parameters including used statistic method.
+
+As privously, before running any tests you have to prepare proper input data. An example is presented below:
+
+```{r, results = 'asis', echo = TRUE} 
+modelDfFromFile <- MulEA::readGmtFileAsDataFrame(gmtFilePath = system.file(package="MulEA", "extdata", "model.gmt"))
+dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742", "FBgn0029709", "FBgn0030341", "FBgn0037044", "FBgn0002887", "FBgn0028434", "FBgn0030170", "FBgn0263831")
+dataFromExperimentScores <- c(0.09, 0.11, 0.15, 0.20, 0.21, 0.24, 0.28, 0.30, 0.45, 0.50)
+```
+
+### Kolmogorov Smirnov Test  
+
+Kolmogorov-Smirnov test is achieved by setting `method` argument to `"KS"`. It is also required to provide `testData` argument.
+
+```{r, results = 'asis', echo=TRUE, warning=FALSE} 
+rankedBasedTestKs <- RankedBasedTest(method = "KS", gmt = modelDfFromFile, testData = dataFromExperiment)
+rankedBasedTestKsRes <- MulEA::runTest(rankedBasedTestKs)
+```
+During the execution of this chunk you will see many warnings from ks.test function from stats package. Warnings look like that:
+```{r, results = 'asis', echo=TRUE} 
+## Warning in ks.test(matchedFromModelDist, randomFromExperimentDist): cannot
+## compute exact p-value with ties
+```
+The reason is that data which we are using in vignette are artificial one. They are constructed to show you how MulEA is working with understanding.
+When you see any error or warnings when you are working with real data, it should be investigated. MulEA is not stopping warnings and error propagation from packages which are used. The interpretation of those messages belongs to user.
+
+
+### Subramanian Test
+
+Subramanian method required `method` argument to be set to `"Subramanian"`. It;s also required `testData` and `scores` to be set. It is important that those two vectors have to be of the same lenght.
+
+```{r, results = 'asis', echo=TRUE} 
+rankedBasedTestSubramanian <- RankedBasedTest(method = "Subramanian", gmt = modelDfFromFile, testData = dataFromExperiment, scores = dataFromExperimentScores)
+rankedBasedTestSubramanianRes <- MulEA::runTest(rankedBasedTestSubramanian)
+```
+
+Below list is the list of arguments accepted by the constructor of the `RankedBasedTest`:
+
+- `method` - required* - It allows user to choose method, which will be used to count probabilities. For no it have to be one of this values "KS", "Subramanian".
+- `gmt` - required* - It is data.frame, which represents model. Read it from file or load from DBs.
+- `testData` - required* - Vector of your experimental data. Example: `dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742")`. In case of KS test it makes a role of ranking also. In Subramanian it creates a ranking with scores argument.
+- `scores` - if method="Subramanian": required*, default: numeric() - This agument is vector of numbers. It creates a ranking with `testData` argument for Subramanian approach.
+- `numberOfPermutations` - default: 1000 - This set number of permutations used to count p-value. You can speed up process of counting by set it to small value, remember that it can result with less accuracy.
+
+Returned data frame from any ranked based test look like that (column specification):
+
+- `ontologyId` - input copy - Column copies from the input data frame. It include onlology ids. Could be for example ids from GO.
+- `ontologyName` - input copy - Column copies from the input data frame. It include onlology names. Could be for example name from GO as "mitochondrion inheritance".
+- `listOfValues` - input copy - Column copies from the input data frame. It include all symbols undet presented ontology id. Example from GO: FBgn0004407, FBgn0010438.
+- `p.value` - output - Cells of this column include counted p-value for provided data.
+
+```{r, results = 'asis', echo = FALSE} 
+knitr::kable(rankedBasedTestKsRes, caption = "Ranked Based Test Result Data Frame")
+```
+  
+### Permutation-based correction for multiple testing  
+
+According to article [Multiple Comparisons Problem](https://en.wikipedia.org/wiki/Multiple_comparisons_problem) you can adjust p-values of tested ontologies by adding the `adjustMethod` argument to `SetBasedTest` class. The value of this argument can newly presented by MulEA method to adjust p-values besed on permutation test. To run that method, please use `"EszterPermutationTest"` as `adjustMethod` argument.
 You can use common R approach and you can use one of the listed values: "holm", "hochberg", "hommel", "bonferroni", "BH", "BY", "fdr". References to this methods can be found here: [link](http://stat.ethz.ch/R-manual/R-devel/library/stats/html/p.adjust.html).
 
 ```{r, results = 'asis', echo = TRUE} 
@@ -153,72 +210,4 @@ Column names presented in results data.frame are:
 - `p.value` - output - Cells of this column include counted p-value for provided data.
 - `q.value` - output - Cells of this column include adjusted p-value according to the model. The result of adjustment is q-value.
 
-
-
-### Ranked Based Tests
-Fundament under ranked based tests is ranking. Ranking can be an ordered vector or any vector with vector of scores, both of them have to be the same length. For now MulEA provides you two ranked based tests. them are the Kolmogorov-Smirnov test and the Subramanian test. Both of them are encloused in `RankedBasedTest` class, which provides you a possibility to set input data and configur other parameters including used statistic method.
-
-As privously, before running any tests you have to prepare proper input data. An example is presented below:
-
-```{r, results = 'asis', echo = TRUE} 
-modelDfFromFile <- MulEA::readGmtFileAsDataFrame(gmtFilePath = system.file(package="MulEA", "extdata", "model.gmt"))
-dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742", "FBgn0029709", "FBgn0030341", "FBgn0037044", "FBgn0002887", "FBgn0028434", "FBgn0030170", "FBgn0263831")
-dataFromExperimentScores <- c(0.09, 0.11, 0.15, 0.20, 0.21, 0.24, 0.28, 0.30, 0.45, 0.50)
-```
-
-#### Kolmogorov Smirnov Test  
-
-Kolmogorov-Smirnov test is achieved by setting `method` argument to `"KS"`. It is also required to provide `testData` argument.
-
-```{r, results = 'asis', echo=TRUE, warning=FALSE} 
-rankedBasedTestKs <- RankedBasedTest(method = "KS", gmt = modelDfFromFile, testData = dataFromExperiment)
-rankedBasedTestKsRes <- MulEA::runTest(rankedBasedTestKs)
-```
-During the execution of this chunk you will see many warnings from ks.test function from stats package. Warnings look like that:
-```{r, results = 'asis', echo=TRUE} 
-## Warning in ks.test(matchedFromModelDist, randomFromExperimentDist): cannot
-## compute exact p-value with ties
-```
-The reason is that data which we are using in vignette are artificial one. They are constructed to show you how MulEA is working with understanding.
-When you see any error or warnings when you are working with real data, it should be investigated. MulEA is not stopping warnings and error propagation from packages which are used. The interpretation of those messages belongs to user.
-
-
-#### Subramanian Test
-
-Subramanian method required `method` argument to be set to `"Subramanian"`. It;s also required `testData` and `scores` to be set. It is important that those two vectors have to be of the same lenght.
-
-```{r, results = 'asis', echo=TRUE} 
-rankedBasedTestSubramanian <- RankedBasedTest(method = "Subramanian", gmt = modelDfFromFile, testData = dataFromExperiment, scores = dataFromExperimentScores)
-rankedBasedTestSubramanianRes <- MulEA::runTest(rankedBasedTestSubramanian)
-```
-
-Below list is the list of arguments accepted by the constructor of the `RankedBasedTest`:
-
-- `method` - required* - It allows user to choose method, which will be used to count probabilities. For no it have to be one of this values "KS", "Subramanian".
-- `gmt` - required* - It is data.frame, which represents model. Read it from file or load from DBs.
-- `testData` - required* - Vector of your experimental data. Example: `dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742")`. In case of KS test it makes a role of ranking also. In Subramanian it creates a ranking with scores argument.
-- `scores` - if method="Subramanian": required*, default: numeric() - This agument is vector of numbers. It creates a ranking with `testData` argument for Subramanian approach.
-- `numberOfPermutations` - default: 1000 - This set number of permutations used to count p-value. You can speed up process of counting by set it to small value, remember that it can result with less accuracy.
-
-Returned data frame from any ranked based test look like that (column specification):
-
-- `ontologyId` - input copy - Column copies from the input data frame. It include onlology ids. Could be for example ids from GO.
-- `ontologyName` - input copy - Column copies from the input data frame. It include onlology names. Could be for example name from GO as "mitochondrion inheritance".
-- `listOfValues` - input copy - Column copies from the input data frame. It include all symbols undet presented ontology id. Example from GO: FBgn0004407, FBgn0010438.
-- `p.value` - output - Cells of this column include counted p-value for provided data.
-
-```{r, results = 'asis', echo = FALSE} 
-knitr::kable(rankedBasedTestKsRes, caption = "Ranked Based Test Result Data Frame")
-```
-  
-  
-
-### Graph Based Test
-(not implemented yet)
-
-
-
-
-## Other
-(not implemented yet)
 
