--- a/vignettes/MulEA.Rmd
+++ b/vignettes/MulEA.Rmd
@@ -93,10 +93,10 @@ dataFromExperimentPool <- unique(c(c("FBgn0033690", "FBgn0261618", "FBgn0004407"
                                    "FBgn0029709", "FBgn0030341")))
 ```
 
-MulEA implements hypergeometric test as highly configurable `SetBasedTest` class.
+MulEA implements hypergeometric test as highly configurable `ORA` class.
 
 ```{r, results = 'asis', echo = TRUE} 
-setBasedTest <- SetBasedTest(gmt = modelDfFromFile, testData = dataFromExperiment)
+setBasedTest <- ORA(gmt = modelDfFromFile, testData = dataFromExperiment)
 setBasedTestRes <- MulEA::runTest(setBasedTest)
 ```
 
@@ -109,7 +109,7 @@ knitr::kable(setBasedTestRes, caption = "Set Based Test Result Data Frame")
 Usage with definition of pool data, which can be different that in presented model is presented below:
 
 ```{r, results = 'asis', echo = TRUE} 
-setBasedTestWithPool <- SetBasedTest(gmt = modelDfFromFile, testData = dataFromExperiment, pool = dataFromExperimentPool)
+setBasedTestWithPool <- ORA(gmt = modelDfFromFile, testData = dataFromExperiment, pool = dataFromExperimentPool)
 setBasedTestWithPoolRes <- MulEA::runTest(setBasedTestWithPool)
 ```
 ```{r, results = 'asis', echo = FALSE} 
@@ -123,7 +123,7 @@ According to article [Multiple Comparisons Problem](https://en.wikipedia.org/wik
 You can use common R approach and you can use one of the listed values: `"holm"`, `"hochberg"`, `"hommel"`, `"bonferroni"`, `"BH"`, `"BY"`, `"fdr"`. References to this methods can be found here: [link](http://stat.ethz.ch/R-manual/R-devel/library/stats/html/p.adjust.html).
 
 ```{r, results = 'asis', echo = TRUE} 
-setBasedTestWithPoolAndAdjust <- SetBasedTest(gmt = modelDfFromFile, testData = dataFromExperiment, pool = dataFromExperimentPool, adjustMethod = "PT")
+setBasedTestWithPoolAndAdjust <- ORA(gmt = modelDfFromFile, testData = dataFromExperiment, pool = dataFromExperimentPool, adjustMethod = "PT")
 setBasedTestWithPoolAndAdjustRes <- MulEA::runTest(setBasedTestWithPoolAndAdjust)
 ```
 ```{r, results = 'asis', echo = FALSE} 
@@ -131,7 +131,7 @@ knitr::kable(setBasedTestWithPoolAndAdjustRes, caption = "Set Based Test Result 
 ```
 
 ```{r, results = 'asis', echo = TRUE} 
-setBasedTestWithPoolAndAdjust <- SetBasedTest(gmt = modelDfFromFile, testData = dataFromExperiment, pool = dataFromExperimentPool, adjustMethod = "BH")
+setBasedTestWithPoolAndAdjust <- ORA(gmt = modelDfFromFile, testData = dataFromExperiment, pool = dataFromExperimentPool, adjustMethod = "BH")
 setBasedTestWithPoolAndAdjustRes <- MulEA::runTest(setBasedTestWithPoolAndAdjust)
 ```
 ```{r, results = 'asis', echo = FALSE} 
@@ -140,7 +140,7 @@ knitr::kable(setBasedTestWithPoolAndAdjustRes, caption = "Set Based Test Result 
 
 Data frames with adjusted p-values contain one extra column, which include q-values.
 
-`SetBasedTest` class constructor accepts list of arguments, such:
+`ORA` class constructor accepts list of arguments, such:
 
 - `gmt` - required* - It is data.frame, which represents model. Read it from file or load from DBs.
 - `testData` - required* - Vector of your experimental data. Example: `dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742")`.
