Rename plotGraph to plot_graph everywhere

--- a/README.Rmd
+++ b/README.Rmd
@@ -83,26 +83,26 @@ View(ora_results)
 Plot results:
 
 ```{r ora-graph, fig.height = 4}
-plotGraph(
-  mulea_relaxed_resuts=ora_reshaped_results,
-  statistics_value_cutoff = 1.00,
-  statistics_value_colname = "adjustedPValueEmpirical"
+plot_graph(
+  reshaped_results=ora_reshaped_results,
+  p_value_max_threshold = 1.00,
+  p_value_type_colname = "adjustedPValueEmpirical"
 )
 ```
    
 ```{r ora-barplot, fig.height = 3}              
 plotBarplot(
-  mulea_relaxed_resuts = ora_reshaped_results,
-  statistics_value_cutoff=1.00,
-  statistics_value_colname = "adjustedPValueEmpirical"
+  reshaped_results = ora_reshaped_results,
+  p_value_max_threshold=1.00,
+  p_value_type_colname = "adjustedPValueEmpirical"
 )
 ```
 
 ```{r ora-heatmap, fig.height = 4}
 plotHeatmap(
-  mulea_relaxed_resuts=ora_reshaped_results,
-  statistics_value_cutoff=1.00,
-  statistics_value_colname = 'adjustedPValueEmpirical'
+  reshaped_results=ora_reshaped_results,
+  p_value_max_threshold=1.00,
+  p_value_type_colname = 'adjustedPValueEmpirical'
 )
 ```
 
@@ -136,19 +136,19 @@ Plot results:
 
 ```{r eval = FALSE}
 # TODO FIX ERROR: Wrongly set data column names
-plotGraph(
-  mulea_relaxed_resuts=ranked_results,
-  statistics_value_cutoff = 1.00
+plot_graph(
+  reshaped_results=ranked_results,
+  p_value_max_threshold = 1.00
 )
 
 plotBarplot(
-  mulea_relaxed_resuts = ranked_results,
-  statistics_value_cutoff=1.00
+  reshaped_results = ranked_results,
+  p_value_max_threshold=1.00
 )
 
 plotHeatmap(
-  mulea_relaxed_resuts=mulea_sub_reshaped_results,
-  statistics_value_cutoff=1.00
+  reshaped_results=mulea_sub_reshaped_results,
+  p_value_max_threshold=1.00
 )
 ```
 
