Rename plotBarplot to plot_barplot everywhere

--- a/README.Rmd
+++ b/README.Rmd
@@ -91,7 +91,7 @@ plot_graph(
 ```
    
 ```{r ora-barplot, fig.height = 3}              
-plotBarplot(
+plot_barplot(
   reshaped_results = ora_reshaped_results,
   p_value_max_threshold=1.00,
   p_value_type_colname = "adjustedPValueEmpirical"
@@ -141,7 +141,7 @@ plot_graph(
   p_value_max_threshold = 1.00
 )
 
-plotBarplot(
+plot_barplot(
   reshaped_results = ranked_results,
   p_value_max_threshold=1.00
 )
