Rename plotHeatmap to plot_heatmap everywhere

--- a/README.Rmd
+++ b/README.Rmd
@@ -99,7 +99,7 @@ plot_barplot(
 ```
 
 ```{r ora-heatmap, fig.height = 4}
-plotHeatmap(
+plot_heatmap(
   reshaped_results=ora_reshaped_results,
   p_value_max_threshold=1.00,
   p_value_type_colname = 'adjustedPValueEmpirical'
@@ -146,7 +146,7 @@ plot_barplot(
   p_value_max_threshold=1.00
 )
 
-plotHeatmap(
+plot_heatmap(
   reshaped_results=mulea_sub_reshaped_results,
   p_value_max_threshold=1.00
 )
