--- a/README.Rmd
+++ b/README.Rmd
@@ -62,7 +62,7 @@ ora_model <- ORA(
   testData = selectDf$select, 
   pool = poolDf$pool,
   adjustMethod = "PT",
-  numberOfPermutations = 1000
+  number_of_permutations = 1000
 )
 
 ora_results <- run_test(ora_model)
@@ -114,7 +114,7 @@ Define an S4 object of class `RankedBasedTest`, run ranked based test (Subramani
 ranked_model <- RankedBasedTest(
   gmt = geneSet,
   testData = selectDf$select,
-  scores = selectDf$score
+  element_scores = selectDf$score
 )
 
 ranked_results <- run_test(ranked_model)
