--- a/vignettes/MulEA.Rmd
+++ b/vignettes/MulEA.Rmd
@@ -171,7 +171,7 @@ Column names presented in results data.frame are:
 
 
 ## Ranking Based Tests
-The ranked list based enrichment analysis needs an ordered list of genes (e.g. transcripts or proteins) as input. Ranking can be an ordered vector or any vector with a vector of scores, both of them having to be the same length. For now MulEA provides you two ranked based tests, the Kolmogorov-Smirnov test and the Subramanian test. Both of them are enclosed in the `RankedBasedTest` class, which provides you a method to set input data and configure other parameters including the used statistic methods.
+The ranked list based enrichment analysis needs an ordered list of genes (e.g. transcripts or proteins) as input. Ranking can be an ordered vector or any vector with a vector of element_scores, both of them having to be the same length. For now MulEA provides you two ranked based tests, the Kolmogorov-Smirnov test and the Subramanian test. Both of them are enclosed in the `GSEA` class, which provides you a method to set input data and configure other parameters including the used statistic methods.
 
 As mentioned previously, before running any tests you have to prepare proper input data. An example is presented below:
 
@@ -187,7 +187,7 @@ dataFromExperimentScores <- c(-0.35, -0.22, -0.09, 0.11, 0.15, 0.20, 0.24, 0.28,
 Kolmogorov-Smirnov test is achieved by setting `method` argument to `"KS"`. It is also required to provide the argument for `testData`.
 
 ```{r, results = 'asis', echo=TRUE, warning=FALSE} 
-#rankedBasedTestKs <- RankedBasedTest(method = "KS", gmt = modelDfFromFile, testData = dataFromExperiment)
+#rankedBasedTestKs <- GSEA(method = "KS", gmt = modelDfFromFile, testData = dataFromExperiment)
 #rankedBasedTestKsRes <- MulEA::run_test(rankedBasedTestKs)
 ```
 During the execution of this chunk you will see many warnings from ks.test function from stats package. Warnings like the following that:
@@ -201,20 +201,20 @@ When you see any error or warnings when you are working with real data, it shoul
 
 ### Subramanian Test
 
-To use the Subramanian set the `method` argument to `"Subramanian"`, and input `testData` and `scores`. It is important that the latter two vectors have to be of the same length.
+To use the Subramanian set the `method` argument to `"Subramanian"`, and input `testData` and `element_scores`. It is important that the latter two vectors have to be of the same length.
 
 ```{r, results = 'asis', echo=TRUE} 
-rankedBasedTestSubramanian <- RankedBasedTest(method = "Subramanian", gmt = modelDfFromFile, testData = dataFromExperiment, scores = dataFromExperimentScores)
+rankedBasedTestSubramanian <- GSEA(method = "Subramanian", gmt = modelDfFromFile, testData = dataFromExperiment, element_scores = dataFromExperimentScores)
 rankedBasedTestSubramanianRes <- MulEA::run_test(rankedBasedTestSubramanian)
 ```
 
-Below is the list of arguments accepted by the constructor of the `RankedBasedTest`:
+Below is the list of arguments accepted by the constructor of the `GSEA`:
 
 - `method` - required* - It allows user to choose the method, which will be used to count probabilities, one of "KS" or "Subramanian".
 - `gmt` - required* - The data.frame, which represents model. Read it from file or load from DBs.
-- `testData` - required* - Vector of your experimental data. Example: `dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742")`. In case of KS test it ranks them. When applying the Subramanian method it creates a ranking using the scores argument.
-- `scores` - if method="Subramanian": required*, default: numeric() - This argument is a vector of numbers. It creates a ranking with `testData` argument for Subramanian approach.
-- `numberOfPermutations` - default: 1000 - This set number of permutations used to count p-value. You can speed up process of counting by set it to small value, but remember that it may impact the accuracy of your test.
+- `testData` - required* - Vector of your experimental data. Example: `dataFromExperiment <- c("FBgn0004407", "FBgn0010438", "FBgn0003742")`. In case of KS test it ranks them. When applying the Subramanian method it creates a ranking using the element_scores argument.
+- `element_scores` - if method="Subramanian": required*, default: numeric() - This argument is a vector of numbers. It creates a ranking with `testData` argument for Subramanian approach.
+- `number_of_permutations` - default: 1000 - This set number of permutations used to count p-value. You can speed up process of counting by set it to small value, but remember that it may impact the accuracy of your test.
 
 Returned data frame from any ranked based test look like the following (column specification):
 
